13954
Hi,

seldomly working with Short I came along this annoying misbehavior of Scala:

{code}
scala> var idx: Short = 1
idx: Short = 1

scala> idx = idx + 1
<console>:5: error: type mismatch;
 found   : Int
 required: Short
       idx = idx + 1
                 ^

scala> idx += 1  
<console>:6: error: type mismatch;
 found   : Int
 required: Short
       idx += 1
           ^

scala> idx = (idx + 1).shortValue
idx: Short = 2
{code}

To have to use .shortValue is rather ugly and shouldn't be necessary within Scala at all (IMHO).
